--- a/web/index.html
+++ b/web/index.html
@@ -7,39 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--Jquery UI css-->
-<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">      <!-- DataTables css-->
-    <link rel="stylesheet"
-    	href="https://cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css"
-    	type="text/css" media="all" />
-    <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" media="all"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"/>
 
-    <!-- Jquery js-->
-    <script type="text/javascript"
-        src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-    <!--JQuery UI js-->>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <!-- JQuery UI js-->
-    <script  src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"></script>
-
-    <!-- DataTables js-->
-    <script
-    	src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
-    <!-- Bootstrap js-->
-    <script
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <!-- DataTables bootstrap js-->
-        <script
-        	src="https://cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js"></script>
+    <!--Bootstrap CSS-->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!--DataTables CSS-->
+    <link href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" rel="stylesheet">
+    <!--JQuery -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"></script>
+    <!--Bootstrap JS-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!--DataTables JS-->
+    <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
 
     <!-- Socket js-->
     <script src="/socket.io/socket.io.js"></script>
     <!-- Script de derrière les fagots-->
-    <script type="text/javascript"
-        src="http://localhost:3000/js/myScript.js"></script>
+  <!--  <script type="text/javascript"
+        src="http://localhost:3000/js/myScript.js"></script> -->
+        <script type="text/javascript"
+              src="https://gengisskhan.herokuapp.com/js/myScript.js"></script>
 
 </head>
 
@@ -49,8 +39,19 @@
     <div class="starter-template">
       <h1>Commande du </h1>
       <table id="tableCourses" class="display table table-striped table-bordered" width="100%" cellspacing="0">
+        <thead>
+          <tr>
+            <th>Numéro</th>
+            <th>Produit</th>
+            <th>code</th>
+            <th>description</th>
+            <th>Prix unitaire</th>
+            <th>Quantité</th>
+            <th>Total ligne</th>
+          </tr>
+        </thead>
       </table>
-      <div><p>Total:</p></div>
+      <div><h3>Total:</h3></div>
   </div>
 </div>
 </body>
