--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
   <!--  <script type="text/javascript"
         src="http://localhost:3000/js/myScript.js"></script> -->
         <script type="text/javascript"
-              src="https://gengisskhan.herokuapp.com/js/myScript.js"></script>
+              src="https://gengiskhan.herokuapp.com/js/myScript.js"></script>
 
 </head>
 
