--- a/web/index.html
+++ b/web/index.html
@@ -26,10 +26,10 @@
     <!-- Socket js-->
     <script src="/socket.io/socket.io.js"></script>
     <!-- Script de derrière les fagots-->
-  <!--  <script type="text/javascript"
-        src="http://localhost:3000/js/myScript.js"></script> -->
-        <script type="text/javascript"
-              src="https://gengiskhan.herokuapp.com/js/myScript.js"></script>
+   <script type="text/javascript"
+        src="http://localhost:3000/js/myScript.js"></script>
+      <!--  <script type="text/javascript"
+              src="https://gengiskhan.herokuapp.com/js/myScript.js"></script>-->
 
 </head>
 
@@ -43,15 +43,19 @@
           <tr>
             <th>Numéro</th>
             <th>Produit</th>
+            <th>Image</th>
             <th>code</th>
             <th>description</th>
             <th>Prix unitaire</th>
             <th>Quantité</th>
             <th>Total ligne</th>
+            <th>Suppression</th>
           </tr>
         </thead>
       </table>
       <div><h3>Total:</h3></div>
+      <button type="button" id="payement">Payer</button>
+
   </div>
 </div>
 </body>
