--- a/web/index.html
+++ b/web/index.html
@@ -26,10 +26,10 @@
     <!-- Socket js-->
     <script src="/socket.io/socket.io.js"></script>
     <!-- Script de derrière les fagots-->
-   <script type="text/javascript"
-        src="http://localhost:3000/js/myScript.js"></script>
-      <!--  <script type="text/javascript"
-              src="https://gengiskhan.herokuapp.com/js/myScript.js"></script>-->
+    <!--  <script type="text/javascript"
+        src="http://localhost:3000/js/myScript.js"></script>-->
+     <script type="text/javascript"
+              src="https://gengiskhan.herokuapp.com/js/myScript.js"></script>
 
 </head>
 
