--- a/web/index.html
+++ b/web/index.html
@@ -26,9 +26,9 @@
     <!-- Socket js-->
     <script src="/socket.io/socket.io.js"></script>
     <!-- Script de derrière les fagots-->
-    <!--  <script type="text/javascript"
+  <!--   <script type="text/javascript"
         src="http://localhost:3000/js/myScript.js"></script>-->
-     <script type="text/javascript"
+      <script type="text/javascript"
               src="https://gengiskhan.herokuapp.com/js/myScript.js"></script>
 
 </head>
@@ -52,6 +52,19 @@
             <th>Suppression</th>
           </tr>
         </thead>
+        <tbody>
+          <tr>
+            <td>Numéro</td>
+            <td>Produit</td>
+            <td>Image</td>
+            <td>code</td>
+            <td>description</td>
+            <td>Prix unitaire</td>
+            <td>Quantité</td>
+            <td>Total ligne</td>
+            <td></td>
+          </tr>
+        </tbody>
       </table>
       <div><h3>Total:</h3></div>
       <button type="button" id="payement">Payer</button>
