correction command + affichage commande

--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
   <title>GenghisSkhan</title>
   <div class="container">
     <div class="starter-template">
-      <div name="connexion">
+      <div id="connexion">
         <h1>Choix</h1>
         <select id="choice_user">
           <p><input type="submit" id="confirmUser" value="Confirmer"/></p>
@@ -59,7 +59,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+        <!--  <tr>
             <td>Numéro</td>
             <td>Produit</td>
             <td>Image</td>
@@ -69,7 +69,7 @@
             <td>Quantité</td>
             <td>Total ligne</td>
             <td></td>
-          </tr>
+          </tr>-->
         </tbody>
       </table>
       <div><h3>Total:</h3></div>
