--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,8 @@
         </select>
       </div>
       <div id="commande_user">
-      <h1>Commande du </h1>
+      <h1 id="titreCommandeDate">Commande du </h1>
+      <h3 id="titreCommandeUser">Utilisateur: </h3>
       <table id="tableCourses" class="display table table-striped table-bordered" width="100%" cellspacing="0">
         <thead>
           <tr>
