--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,9 @@
 
     <!-- Socket js-->
     <script src="/socket.io/socket.io.js"></script>
+    <!--Affichaghe toast-->
+    <script src="http://localhost:3000/webapp/js/toastr.js"></script>
+<!--<script src="http://localhost:3000/webapp/js/toastr.js"></script>-->
     <!-- Script de derrière les fagots-->
    <script type="text/javascript"
         src="http://localhost:3000/webapp/js/myScript.js"></script>
