--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,9 @@
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--DataTables CSS-->
     <link href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" rel="stylesheet">
-    <!--JQuery -->
+    <!--Toastr CSS-->
+    <link href="http://localhost:3000/webapp/dist/css/toastr.css" rel="stylesheet"/>
+    <!--JQuery JS-->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
