--- a/web/index.html
+++ b/web/index.html
@@ -67,7 +67,7 @@
         <tbody>
         </tbody>
       </table>
-      <div><h3>Total:</h3></div>
+      <div><h3 id="totalCom">Total:</h3></div>
       <button type="button" id="payement">Payer</button>
   </div>
 </div>
