--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,9 @@
     <!--DataTables CSS-->
     <link href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" rel="stylesheet">
     <!--Toastr CSS-->
-    <link href="http://localhost:3000/webapp/dist/css/toastr.css" rel="stylesheet"/>
+    <link href="https://gengiskhan.herokuapp.com:3000/webapp/dist/css/toastr.css" rel="stylesheet"/>
+    <!--Toastr CSS-->
+    <!--<link href="http://localhost:3000/webapp/dist/css/toastr.css" rel="stylesheet"/>-->
     <!--JQuery JS-->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -28,13 +30,13 @@
     <!-- Socket js-->
     <script src="/socket.io/socket.io.js"></script>
     <!--Affichaghe toast-->
-    <script src="http://localhost:3000/webapp/js/toastr.js"></script>
-<!--<script src="http://localhost:3000/webapp/js/toastr.js"></script>-->
+  <!--  <script src="http://localhost:3000/webapp/js/toastr.js"></script>-->
+  <script src="https://gengiskhan.herokuapp.com:3000/webapp/js/toastr.js"></script>
     <!-- Script de derrière les fagots-->
-   <script type="text/javascript"
-        src="http://localhost:3000/webapp/js/myScript.js"></script>
-      <!--  <script type="text/javascript"
-              src="https://gengiskhan.herokuapp.com/js/myScript.js"></script>-->
+  <!--  <script type="text/javascript"
+        src="http://localhost:3000/webapp/js/myScript.js"></script>-->
+       <script type="text/javascript"
+              src="https://gengiskhan.herokuapp.com/js/myScript.js"></script>
 </head>
 
 <body>
