--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
   <!--  <script type="text/javascript"
         src="http://localhost:3000/webapp/js/myScript.js"></script>-->
        <script type="text/javascript"
-              src="https://gengiskhan.herokuapp.com/js/myScript.js"></script>
+              src="https://gengiskhan.herokuapp.com/webapp/js/myScript.js"></script>
 </head>
 
 <body>
