--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     <!--DataTables CSS-->
     <link href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" rel="stylesheet">
     <!--Toastr CSS-->
-    <link href="https://gengiskhan.herokuapp.com:3000/webapp/dist/css/toastr.css" rel="stylesheet"/>
+    <link href="https://gengiskhan.herokuapp.com/webapp/dist/css/toastr.css" rel="stylesheet"/>
     <!--Toastr CSS-->
     <!--<link href="http://localhost:3000/webapp/dist/css/toastr.css" rel="stylesheet"/>-->
     <!--JQuery JS-->
@@ -31,7 +31,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <!--Affichaghe toast-->
   <!--  <script src="http://localhost:3000/webapp/js/toastr.js"></script>-->
-  <script src="https://gengiskhan.herokuapp.com:3000/webapp/js/toastr.js"></script>
+  <script src="https://gengiskhan.herokuapp.com/webapp/js/toastr.js"></script>
     <!-- Script de derrière les fagots-->
   <!--  <script type="text/javascript"
         src="http://localhost:3000/webapp/js/myScript.js"></script>-->
