--- a/web/index.html
+++ b/web/index.html
@@ -8,47 +8,48 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!--Bootstrap CSS-->
+    <!--CSS-->
+
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!--DataTables CSS-->
     <link href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" rel="stylesheet">
-    <!--Toastr CSS-->
     <link href="https://gengiskhan.herokuapp.com/webapp/dist/css/toastr.css" rel="stylesheet" />
-    <!--JQuery JS-->
+    <link href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css" rel="stylesheet" />
+    <link href="https://cdn.datatables.net/buttons/1.2.3/css/buttons.dataTables.min.css" rel="stylesheet" />
+
+    <!--JS-->
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <!--Bootstrap JS-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!--DataTables JS-->
     <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
-    <!-- Datatables button js-->
     <script src="https://cdn.datatables.net/buttons/1.2.3/js/dataTables.buttons.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>
     <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js"></script>
     <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.2.3/js/buttons.html5.min.js"></script>
-    <!-- Socket js-->
     <script src="/socket.io/socket.io.js"></script>
-    <!--Affichaghe toast-->
     <script src="https://gengiskhan.herokuapp.com/webapp/js/toastr.js"></script>
-    <!-- Script de derrière les fagots-->
     <script type="text/javascript" src="http://localhost:3000/webapp/js/myScript.js"></script>
-    <!--   <script type="text/javascript"
-              src="https://gengiskhan.herokuapp.com/webapp/js/myScript.js"></script>-->
+
 </head>
 
 <body>
     <title>GenghisSkhan</title>
     <div class="container">
         <div class="starter-template">
+
             <div id="connexion">
                 <h1>Choix</h1>
                 <select id="choice_user">
-          <p><input type="submit" id="confirmUser" value="Confirmer"/></p>
-        </select>
+                </select>
+                <p>
+                    </br>
+                    <input type="submit" id="confirmUser" value="Confirmer"/>
+                </p>
             </div>
+            
             <div id="commande_user">
                 <h1 id="titreCommandeDate">Commande du </h1>
-                <h3 id="titreCommandeUser">Utilisateur: </h3>
+                <h3 id="titreCommandeUser">Utilisateur : </h3>
                 <table id="tableCourses" class="display table table-striped table-bordered" width="100%" cellspacing="0">
                     <thead>
                         <tr>
@@ -67,7 +68,7 @@
                     </tbody>
                 </table>
                 <div>
-                    <h3 id="totalCom">Total:</h3>
+                    <h3 id="totalCom">Total :</h3>
                 </div>
                 <button type="button" id="payement">Payer</button>
             </div>
