--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
     <script src="https://cdn.datatables.net/buttons/1.2.3/js/buttons.html5.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://gengiskhan.herokuapp.com/webapp/js/toastr.js"></script>
-    <script type="text/javascript" src="http://localhost:3000/webapp/js/myScript.js"></script>
+    <script type="text/javascript" src="https://gengiskhan.herokuapp.com/webapp/js/myScript.js"></script>
 
 </head>
 
