--- a/web/admin.html
+++ b/web/admin.html
@@ -31,6 +31,11 @@
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="https://gengiskhan.herokuapp.com/webapp/js/myScriptAdmin.js"></script>
 
+    <link href="https://gengiskhan.herokuapp.com/webapp/assets/css/style.css" rel="stylesheet">
+    <link href="https://gengiskhan.herokuapp.com/webapp/assets/css/style-responsive.css" rel="stylesheet">
+
+    <script src="https://gengiskhan.herokuapp.com/webapp/sassets/js/chart-master/Chart.js"></script>
+    
 </head>
 
 <body>
