--- a/web/admin.html
+++ b/web/admin.html
@@ -51,7 +51,6 @@
                         <h4 class="modal-title" id="myModalLabeladd">Ajouter un produit</h4>
                     </div>
                     <div class="modal-body">
-
                         <form class="form-horizontal style-form" id="formadd">
                             <div class="form-group">
                                 <label class="col-sm-2 col-sm-2 control-label">Code barre</label>
@@ -78,11 +77,10 @@
                                 </div>
                             </div>
                         </form>
-
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                        <button id="add-button" type="button" class="btn btn-primary">Ajouter</button>
+                        <button id="add-button" type="button" class="btn btn-primary" data-dismiss="modal">Ajouter</button>
                     </div>
                 </div>
             </div>
@@ -97,7 +95,6 @@
                         <h4 class="modal-title" id="myModalLabelup">Modifier un produit</h4>
                     </div>
                     <div class="modal-body">
-
                         <form class="form-horizontal style-form" id="formupdate">
                             <div class="form-group">
                                 <label class="col-sm-2 col-sm-2 control-label">Code barre</label>
@@ -124,11 +121,10 @@
                                 </div>
                             </div>
                         </form>
-
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                        <button id="modify-button" type="button" class="btn btn-primary">Modifier</button>
+                        <button id="modify-button" type="button" class="btn btn-primary" data-dismiss="modal">Modifier</button>
                     </div>
                 </div>
             </div>
@@ -146,7 +142,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                        <button id="remove-button" type="button" class="btn btn-primary">Oui</button>
+                        <button id="remove-button" type="button" class="btn btn-primary" data-dismiss="modal">Oui</button>
                     </div>
                 </div>
             </div>
