--- a/web/admin.html
+++ b/web/admin.html
@@ -12,7 +12,7 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" rel="stylesheet">
-    <link href="http://localhost:3000/webapp/dist/css/toastr.css" rel="stylesheet" />
+    <link href="https://gengiskhan.herokuapp.com/webapp/dist/css/toastr.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/buttons/1.2.3/css/buttons.dataTables.min.css" rel="stylesheet" />
 
