--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,8 @@
     <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js"></script>
     <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.2.3/js/buttons.html5.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://gengiskhan.herokuapp.com/webapp/js/toastr.js"></script>
     <!--<script type="text/javascript" src="http://localhost:3000/webapp/js/myScript.js"></script>-->
@@ -38,7 +40,7 @@
     <link rel="stylesheet" type="text/css" href="https://gengiskhan.herokuapp.com/webapp/assets/lineicons/style.css">
 
     <!-- Custom styles for this template -->
-    <link href="https://gengiskhan.herokuapp.com/webapp/assets/css/style.css" rel="stylesheet">
+  <link href="https://gengiskhan.herokuapp.com/webapp/assets/css/style.css" rel="stylesheet">
     <link href="https://gengiskhan.herokuapp.com/webapp/assets/css/style-responsive.css" rel="stylesheet">
 
     <script src="https://gengiskhan.herokuapp.com/webapp/assets/js/chart-master/Chart.js"></script>
@@ -48,7 +50,54 @@
 <body>
 
     <section id="container">
-
+      <div class="modal fade" id="modal-modify" tabindex="-1" role="dialog" aria-labelledby="myModalLabelup" aria-hidden="true">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabelup">Modifier un produit</h4>
+                  </div>
+                  <div class="modal-body">
+                      <form class="form-horizontal style-form" id="formupdate">
+                          <div class="form-group">
+                              <label class="col-sm-2 col-sm-2 control-label">Code barre</label>
+                              <div class="col-sm-10">
+                                  <input class="form-control" name="product_id" type="text" disabled>
+                              </div>
+                          </div>
+                          <div class="form-group">
+                              <label class="col-sm-2 col-sm-2 control-label">Nom</label>
+                              <div class="col-sm-10">
+                                  <input class="form-control" name="name" type="text" disabled>
+                              </div>
+                          </div>
+                          <div class="form-group">
+                              <label class="col-sm-2 col-sm-2 control-label">Description</label>
+                              <div class="col-sm-10">
+                                  <input class="form-control" name="description" type="text" disabled>
+                              </div>
+                          </div>
+                          <div class="form-group">
+                              <label class="col-sm-2 col-sm-2 control-label">Prix</label>
+                              <div class="col-sm-10">
+                                  <input class="form-control" name="price" type="text" >
+                              </div>
+                          </div>
+                          <div class="form-group">
+                              <label class="col-sm-2 col-sm-2 control-label">Quantité</label>
+                              <div class="col-sm-10">
+                                  <input class="form-control" name="quantity" type="text" >
+                              </div>
+                          </div>
+                      </form>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                      <button id="modify-button" type="button" class="btn btn-primary" data-dismiss="modal">Modifier</button>
+                  </div>
+              </div>
+          </div>
+      </div>
         <header class="header black-bg">
             <div class="sidebar-toggle-box">
                 <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
@@ -65,8 +114,8 @@
             </div>
         </header>
 
-        <br/><br/><br/><br/>
 
+        <br/><br/><br/><br/>
         <div id="connexion">
             <div class="row mt">
                 <div class="col-lg-12">
@@ -80,7 +129,6 @@
                 </div>
             </div>
         </div>
-
         <div id="commande_user">
             <h1 id="titreCommandeDate">Commande du </h1>
             <h3 id="titreCommandeUser">Utilisateur : </h3>
