--- a/web/index.html
+++ b/web/index.html
@@ -30,21 +30,21 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://gengiskhan.herokuapp.com/webapp/js/toastr.js"></script>
-    <!--<script type="text/javascript" src="http://localhost:3000/webapp/js/myScript.js"></script>-->
-   <script type="text/javascript" src="https://gengiskhan.herokuapp.com/webapp/js/myScript.js"></script>
+    <script type="text/javascript" src="http://localhost:3000/webapp/js/myScript.js"></script>
+  <!-- <script type="text/javascript" src="https://gengiskhan.herokuapp.com/webapp/js/myScript.js"></script>-->
 
     <!--external css-->
-    <link href="https://gengiskhan.herokuapp.com/webapp/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+  <!--  <link href="https://gengiskhan.herokuapp.com/webapp/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="https://gengiskhan.herokuapp.com/webapp/assets/css/zabuto_calendar.css">
     <link rel="stylesheet" type="text/css" href="https://gengiskhan.herokuapp.com/webapp/assets/js/gritter/css/jquery.gritter.css" />
     <link rel="stylesheet" type="text/css" href="https://gengiskhan.herokuapp.com/webapp/assets/lineicons/style.css">
-
+-->
     <!-- Custom styles for this template -->
-  <link href="https://gengiskhan.herokuapp.com/webapp/assets/css/style.css" rel="stylesheet">
+  <!--<link href="https://gengiskhan.herokuapp.com/webapp/assets/css/style.css" rel="stylesheet">
     <link href="https://gengiskhan.herokuapp.com/webapp/assets/css/style-responsive.css" rel="stylesheet">
 
     <script src="https://gengiskhan.herokuapp.com/webapp/assets/js/chart-master/Chart.js"></script>
-
+-->
 </head>
 
 <body>
